# scrollTextProject

./: .gitignore  OLD.py  Pipfile  README.md  description.env  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: code-embedder.yml  python-package.yml  python-publish.yml
ScrollText/: circle.py
example/: example.json
scrolltext/: __main__.py
scrolltext_gif/: __main__.py  vertical.py
src/ScrollText/: __main__.py  backend.py  vertical.py
